implement logging in

--- a/static/views/login.html
+++ b/static/views/login.html
@@ -3,10 +3,10 @@
     <form layout="column" class="login-form">
         <h2>Login</h2>
         <md-text-float flex label="Email" ng-model="user.email" class="long"></md-text-float>
-        <md-text-float flex label="Password" ng-model="user.password" class="long"></md-text-float>
+        <md-text-float type="password" flex label="Password" ng-model="user.password" class="long"></md-text-float>
         <div layout="row" layout-margin layout-fill>
-            <md-button flex class="md-raised">Sign in</md-button>
-            <md-button flex class="md-raised">Sign up</md-button>
+            <md-button flex class="md-raised" ng-click="signIn()">Sign in</md-button>
+            <md-button flex class="md-raised" ng-click="signUp()">Sign up</md-button>
         </div>
     </form>
     </md-card>
