--- a/static/views/settings.html
+++ b/static/views/settings.html
@@ -10,6 +10,8 @@
                    ng-model="user.classDuration" disabled></md-text-float>
     <div layout="row" style="width: 100%" flex>
         <md-button class="md-raised md-primary save-btn" ng-click="saveSettings()" flex>Save</md-button>&nbsp;&nbsp;&nbsp;
-        <md-button class="md-raised md-primary save-btn" ng-show="user.university === 'kpi'" flex>Import to Google Calendar</md-button>
+        <md-button class="md-raised md-primary save-btn"
+                   ng-click="addToGCalendar()"
+                   ng-show="user.university === 'kpi'" flex>Import to Google Calendar</md-button>
     </div>
 </md-content>
