remove forward slash

--- a/static/views/settings.html
+++ b/static/views/settings.html
@@ -11,7 +11,7 @@
     <div layout="row" style="width: 100%" flex>
         <md-button class="md-raised md-primary save-btn" ng-click="saveSettings()" flex>Save</md-button>&nbsp;&nbsp;&nbsp;
         <md-button class="md-raised md-primary save-btn"
-                   ng-click="addToGCalendar()"
+                   href="/login/google"
                    ng-show="user.university === 'kpi'" flex>Import to Google Calendar</md-button>
     </div>
 </md-content>
