detect oauth completed by cookie

--- a/static/views/settings.html
+++ b/static/views/settings.html
@@ -6,7 +6,7 @@
     </md-radio-group>
     <md-text-float label="Group name" class="longer"
                    ng-model="user.group" disabled></md-text-float>
-    <md-text-float label="Class duration" class="longer" type="number"
+    <md-text-float label="Class duration" class="longer"
                    ng-model="user.classDuration" disabled></md-text-float>
     <div layout="row" style="width: 100%" flex>
         <md-button class="md-raised md-primary save-btn" ng-click="saveSettings()" flex>Save</md-button>&nbsp;&nbsp;&nbsp;
